--- a/templates/includes/_navbar_hi.html
+++ b/templates/includes/_navbar_hi.html
@@ -8,16 +8,16 @@
         <span class="icon-bar"></span>
       </button>
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="/" style="color:white; font-size:30px; font-family: 'Love Ya Like A Sister', cursive;"><span class="glyphicon glyphicon-education"></span><strong>IndoLingo</strong></a></li>
-        <li><a href="/" style="color:white; margin-top:10px; font-size:25px; font-family: 'Indie Flower', cursive;"><strong>Home</strong></a></li>
+        <li><a href="/hindi" style="color:white; font-size:30px; font-family: 'Love Ya Like A Sister', cursive;"><span class="glyphicon glyphicon-education"><strong>भारतभाषा</strong></span></a></li>
+        <li><a href="/hindi" style="color:white; margin-top:10px; font-size:25px; font-family: 'Indie Flower', cursive;"><strong>घर</strong></a></li>
       </ul>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-              <a href="/SLang" style="color:white; margin-top:10px; font-size:25px; font-family: 'Indie Flower', cursive;"  class="dropbtn"><strong>Site Language</strong></a>
+              <a href="/SLang" style="color:white; margin-top:10px; font-size:25px; font-family: 'Indie Flower', cursive;"  class="dropbtn"><strong>वेबसाइट भाषा</strong></a>
               <div class="dropdown-content">
-                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/tamil"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> தமிழ்</a>
+                <a class="flag flag-svg-micro flag-in" style="margin-top:10px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/tamil"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> தமிழ்</a>
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/hindi"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> हिंदी</a>
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/sanskrit"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> संस्कृतम्</a>
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/bangla"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> বাংলা</a>
@@ -26,7 +26,7 @@
                 <a class="flag flag-svg-micro flag-gb" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='gb.svg')}}" alt="Britain"> English</a>
               </div>
         </li>
-        <li><a href="/login" style="color:white; margin-top:10px; font-size:25px; font-family: 'Indie Flower', cursive;"><strong>Login/Sign Up</strong></a></li>
+        <li><a href="/login" style="color:white; margin-top:10px; font-size:25px; font-family: 'Indie Flower', cursive;"><strong>लॉग-इन या साइन-अप</strong></a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
