--- a/templates/includes/_navbarAfterLogin.html
+++ b/templates/includes/_navbarAfterLogin.html
@@ -18,7 +18,7 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+<!---        <li class="dropdown">
               <a href="/SLang" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"  class="dropbtn"><strong>Site Language</strong></a>
               <div class="dropdown-content">
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/tamil"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> தமிழ்</a>
@@ -27,7 +27,12 @@
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/bangla"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> বাংলা</a>
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/odia"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> ଓଡ଼ିଆ</a>
                 <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/punjabi"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> ਪੰਜਾਬੀ</a>
+                <a class="flag flag-svg-micro flag-gb" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/english"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='gb.svg')}}" alt="Britain"> English</a>
               </div>
+        </li>
+-->
+        <li id="stars">
+          <a href="#"><span style="color:white; font-size:25px; margin-top:5px">4</span><img src="{{url_for('static', filename='stars')}}" alt="starts" style="height:30px; width:30px;"></a>
         </li>
         <li class="dropdown">
               <a href="/Profile" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"  class="dropbtn"><strong>My Profile</strong></a>
